# ORIEL

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  tests.yml
docs/: ARCHITECTURE.md  COMPLETE_VERSION_INDEX.md  DOCUMENTATION_INDEX.md  IDE_SUPPORT.md  IMPLEMENTATION_STATUS.md  MERGE_STATUS_0.1.0_TO_0.8.1.md  MODULES_AND_STDLIB_0.7.3.md  RELEASE_0.8.1.md  RELEASE_ARTIFACT_MATRIX.md  RELEASE_PLAN_0.1.0_TO_0.8.1.md  ROADMAP.md  TYPE_SYSTEM_0.7.2.md  VERIFICATION_0.7.1.md  VERIFICATION_0.7.2.md  VERIFICATION_0.7.3.md  VERSION_HISTORY.md
editors/eclipse/: README.md
editors/emacs/: README.md
editors/fleet/: README.md
editors/helix/: README.md
editors/jetbrains/: README.md
editors/kate/: README.md
editors/neovim/: README.md
editors/sublime-text/: README.md
editors/vim/: README.md
editors/visual-studio/: README.md
editors/zed/: README.md
examples/: core_02.orl  loop.orl  modules_073.orl  types_072.orl
frameworks/ai/: README.md
frameworks/api/: README.md
frameworks/cloud/: README.md
frameworks/data/: README.md
frameworks/database/: README.md
frameworks/desktop/: README.md
frameworks/mobile/: README.md
frameworks/web/: README.md
release-assets/: SHA256SUMS.txt
release-assets/0.1.0/: README.md
release-assets/0.2.0/: README.md
release-assets/0.3.0/: README.md
release-assets/0.4.0/: README.md
release-assets/0.5.0/: README.md
release-assets/0.6.0/: README.md
release-assets/0.7.0/: README.md
release-assets/0.7.1/: README.md
release-assets/0.7.2/: README.md
release-assets/0.7.3/: README.md
release-assets/0.7.4/: README.md
release-assets/0.7.5/: README.md
release-assets/0.8.0/: README.md
release-assets/0.8.1/: README.md
scripts/: build_release_artifacts.ps1  verify_repository.py
src/oriel/: cli.py  compiler.py  console_tools.py  debugger.py  diagnostics.py  interpreter.py  lsp.py  modules.py  package_manager.py  profiler.py  (+2 more)
stdlib/: collections.orl  config.orl  json.orl  logging.orl  testing.orl  text.orl  time.orl
versions/0.2.0/: README.md  pyproject.toml
versions/0.2.0/src/oriel/: __init__.py  cli.py  interpreter.py
versions/0.5.0/: README.md  pyproject.toml
versions/0.5.0/src/oriel/: __init__.py  api_framework.py  cli.py
versions/0.5.0/tests/: test_v05.py
versions/0.6.0/: README.md  pyproject.toml
versions/0.6.0/src/oriel/: cli.py  package_manager.py
versions/0.6.0/tests/: test_cli_package.py  test_v02.py  test_v06.py
versions/0.7.0/: README.md  pyproject.toml
versions/0.7.0/src/oriel/: application_services.py  cli.py  console_tools.py  db_framework.py  interpreter.py  lsp.py
versions/0.7.0/tests/: test_v04.py  test_v07.py
vscode-extension/: CHANGELOG.md  README.md  RELEASE-0.7.0.md  extension.js  language-configuration.json  package.json
(+52 files in other folders)
