
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oriel-language"
version = "0.8.1"
description = "ORIEL 0.8.1 package manager, LSP, bytecode VM, debugger and profiler"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Oriel Language Project"}]

[project.scripts]
oriel = "oriel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.setuptools.package-data]
oriel = ["stdlib/*.orl"]
