
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oriel-language"
version = "0.7.0"
description = "ORIEL 0.7 stable console foundation with bytecode, REPL, docs, doctor and benchmarking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Oriel Language Project"}]

[project.scripts]
oriel = "oriel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
